--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -8,14 +8,14 @@
                 </div>
                 <div class="text-center">
                     <div class="flex justify-center space-x-6">
-                        <a href="#" class="text-slate-600 hover:text-primary transition-colors">
+                        <a href="" class="text-slate-600 hover:text-primary transition-colors">
                             <i class="fab fa-twitter text-xl"></i>
                         </a>
-                        <a href="#" class="text-slate-600 hover:text-primary transition-colors">
+                        <a href="https://www.linkedin.com/in/acses-srid-068296343/" class="text-slate-600 hover:text-primary transition-colors">
                             <i class="fab fa-linkedin text-xl"></i>
                         </a>
-                        <a href="#" class="text-slate-600 hover:text-primary transition-colors">
-                            <i class="fab fa-github text-xl"></i>
+                        <a href="https://www.instagram.com/acsessrid/" class="text-slate-600 hover:text-primary transition-colors">
+                            <i class="fab fa-instagram text-xl"></i>
                         </a>
                     </div>
                 </div>
