Update footer links to point to new social media profiles

--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="text-center">
                     <div class="flex justify-center space-x-6">
-                        <a href="" class="text-slate-600 hover:text-primary transition-colors">
+                        <a href="https://x.com/Acsessrid" class="text-slate-600 hover:text-primary transition-colors">
                             <i class="fab fa-twitter text-xl"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/acses-srid-068296343/" class="text-slate-600 hover:text-primary transition-colors">
